# fewshot_engine

./: README.md  pyproject.toml  runscript.py  sample_util.py
context_managers/: OpenWithHandling.py
few_shot_engine/: engine_factory.py  few_shot_engine.py  gui.py  runscript.py  zip_utils.py
few_shot_engine/context_managers/: CatchingContextManager.py  PythonPathHas.py
few_shot_engine/few_shot_engine/: few_shot_engine.py  runscript.py
few_shot_engine/few_shot_engine/context_managers/: OpenWithHandling.py
few_shot_engine/general_models/: model_factory.py  oai.py
few_shot_engine/test/: test_zipped.json
few_shot_engine/test/test_unzipped_dir/: 1_example.input.txt  1_example.metadata.json  1_example.output.txt
src/: engine_factory.py  few_shot_engine.py
src/general_models/: oai.py
test/: test_zipped.json
test/test_unziped_dir/: 0_example.input.txt  0_example.metadata.json  0_example.output.txt  1_example.metadata.json  prompt_1.txt
test/test_unzipped_dir/: 0_example.input.txt  0_example.metadata.json  0_example.output.txt
