[tool.poetry]
name = "few-shot-engine"
version = "0.1.0"
description = "A toolset for manipulating, refining, recording, and training on few-shot prompting tasks."
authors = ["gabbalis <nicholascraycraft@gmail.com>"]
license = "APGL"
readme = "README.md"
packages = [{include = "few_shot_engine"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.9"
loguru = "^0.7.0"
tenacity = "^8.2.3"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
